# NebulaCanvas

./: API_SPEC.md  DESIGN_PHILOSOPHY.md  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
backend/: Cargo.toml  DESIGN_BACKEND.md  Settings.toml
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: websocket.rs
backend/src/engine/: mock.rs  mod.rs  rustorch_impl.rs
backend/src/state/: mod.rs
backend/src/util/: mod.rs
frontend/: package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/app/: page.tsx
frontend/src/hooks/: useWebSocket.ts
logs/: instruction_log.md
