[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
image = "0.24"
base64 = "0.21"
anyhow = "1.0"
async-trait = "0.1"
rustorch = { path = "../../RusTorch" }
redb = "2.0"
uuid = { version = "1.0", features = ["v4"] }
blake3 = "1.5"
config = "0.14"
